# slight

./: CMakeLists.txt  DLProg.cpp  DLProgConfig.h.in  README.md  Slight.cpp  SlightConfig.h.in  slight.cpp
Functions/: CMakeLists.txt  Functions.h  myfunc.cpp
